refactor: get in line with habit context

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,32 @@
 //
+$background: #222129;
+
+html {
+    background-color: $background;
+}
+
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 14px;
+    color: white;
+}
+
+h1 {
+    font-size: 32px;
+    color: white;
+}
+
+.habits {
+    justify-content: left;
+    display: flex;
+    align-items: left;
+    padding: 20px;
+}
+
+.app {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 6fr;
+    grid-column-gap: 1px;
+}
