refactor: set modal data for selected habit

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53,6 +53,10 @@ img {
   padding-top: 32px;
 }
 
+#modal-span {
+  padding-top: 16px;
+}
+
 /*! bulma.io v0.8.0 | MIT License | github.com/jgthms/bulma */
 
 @-webkit-keyframes spinAround {
